# worldsim-ai

./: .editorconfig  .env.example  .gitattributes  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SUPPORT.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  robots.txt  run_demo.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/issue_templates/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  dependabot-auto.yml  dependabot-autopilot.yml  dependabot-cron.yml  label.yml  mirror.yml  stale.yml  welcome.yml
config/: default.yaml
docs/: ARCHITECTURE.md  SIMULATION_GUIDE.md
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
tests/: test_agents.py  test_ai.py  test_api_cli.py  test_distributed.py  test_engine.py  test_io.py  test_ml.py  test_twin.py
worldsim/: __init__.py  cli.py
worldsim/agents/: __init__.py  behaviors.py  models.py
worldsim/ai/: __init__.py  ml_models.py  optimizer.py  predictor.py  reinforcement_learning.py
worldsim/api/: __init__.py
worldsim/core/: __init__.py  engine.py  events.py  state.py
worldsim/data/: __init__.py  generator.py
worldsim/distributed/: engine.py  node.py
worldsim/environment/: __init__.py  resources.py  world.py
worldsim/io/: sources.py
worldsim/scenarios/: __init__.py  definitions.py  engine.py
worldsim/twin/: connector.py  core.py  plugins.py
worldsim/utils/: __init__.py  config.py  metrics.py
(+6 files in other folders)
